--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -22,7 +22,7 @@
       <div class="banner">
         <p class="banner-title"><a href="#">P1 Project Requirements</a></p>
         <p class="banner-sub-title">H&aring;vard, Runar, Petter, Thomas</p>
-        <p class="banner-date">Thursday 22.09.2016</p>
+        <p class="banner-date">Friday 23.09.2016</p>
       </div>
 
       <div class="inner-container">
@@ -32,14 +32,8 @@
               <h1><a href="#the_client">The client</a></h1>
             </header>
 
-            <figure class="float-right">
-              <img src="../res/img_0.jpg" width="150px" alt="Image placeholder" />
-              <figcaption>404 - img not found</figcaption>
-            </figure>
-
-            <p><a href ="http://www.idi.ntnu.no/~michailg/IT2805/exampleproject/p1_requirementsexample.html">Example</a></p>
-            <p>Administrative details: the name of your client, and his or her position
-              in the organization (or company), if applicable.</p>
+            <p>Client: Ad Infinitum (that's us)</p>
+            <p>We're a group of four which wanted to create a website about something we are passionate about; building PCs. The website name will be "Build a PC".</p>
           </section>
 
           <hr />
@@ -49,8 +43,10 @@
               <h1><a href="#purpose_and_goals">Purpose and Goals</a></h1>
             </header>
 
-            <p>The site's purpose and goals and how they will be accomplished by the site.
-              Try to draw a connection between the goals and specific content elements of the site.</p>
+            <p>There are people out there that doesn't know how to build a PC.
+            We think these people deserve to know how to, so our purpose it to try and teach them.
+            Our goal is to teach everyone how to do it. The site will provide information about what the parts of the computer does,
+            which products to consider when buying parts, how to assemble it and which OS to pick.</p>
           </section>
 
           <hr />
@@ -60,8 +56,7 @@
               <h1><a href="#audience">Audience</a></h1>
             </header>
 
-            <p>Who is the intended audience or typical user? Describe them and
-              their needs for information and other content.</p>
+            <p>The website's main audience will be the people that doen't already know how to build a PC, but wants to know.</p>
           </section>
 
           <hr />
@@ -71,11 +66,15 @@
               <h1><a href="#content_organization">Content Organization</a></h1>
             </header>
 
-            <p>A description of the content of the site and how it is organized.
-              Think of this as the outline of a paper: it doesn't have to spell out
-              the sentences or even the paragraphs, but it should mention major
-              sections and even a few salient subsections. In your conference,
-              be prepared to discuss the site's content, and to explore the feasibility of its design.</p>
+            <p>The site will consist of four sections plus a home page, where each section will consist of minimum one page.</p>
+            <p>Home page: Our mission</p>
+            <p>Sections:</p>
+            <ol>
+              <li>About the parts: Will explain in minor detail how each of the parts of a PC work.</li>
+              <li>Comparison of parts currently on the market: Will compare prices and specs. of the parts currently on the market.</li>
+              <li>How to assemble the PC: How to connect the parts together.</li>
+              <li>Choosing an operatins system: Comparison of operating systems and installation instructions.</li>
+            </ol>
           </section>
 
           <hr />
@@ -85,7 +84,7 @@
               <h1><a href="#location_of_website">Location of Website</a></h1>
             </header>
 
-            <p>Where will the website be located/hosted?</p>
+            <p>The website will be hosted on GitHub Pages under the subdomain <a href="https://build-a-pc.github.io/">build-a-pc.github.io</a>.</p>
           </section>
         </main>
       </div>
