--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <body>
     <div class="outer-container">
       <div class="banner">
-        <p class="banner-title"><a href="#">Ad Infinitum</a></p>
+        <p class="banner-title"><a href="#">Build a PC</a></p>
+        <p class="banner-sub-title">by Ad Infinitum</p>
       </div>
 
       <div class="inner-container">
