--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -2,7 +2,7 @@
 
 <!-- WARNING: Do not edit after deadline has passed! -->
 
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="project info" />
@@ -33,7 +33,9 @@
             </header>
 
             <p>Client: Ad Infinitum (that's us)</p>
-            <p>We're a group of four which wanted to create a website about something we are passionate about; building PCs. The website name will be "Build a PC".</p>
+            <p>We're a group of four which wanted to create a website about something we are passionate about; building PCs.
+              The website name will be "Build a PC". We will write about how parts work, compare parts, how to assemble it
+              and which operating systems to consider.</p>
           </section>
 
           <hr />
@@ -44,9 +46,9 @@
             </header>
 
             <p>There are people out there that doesn't know how to build a PC.
-            We think these people deserve to know how to, so our purpose it to try and teach them.
-            Our goal is to teach everyone how to do it. The site will provide information about what the parts of the computer does,
-            which products to consider when buying parts, how to assemble it and which OS to pick.</p>
+              We think these people deserve to know how to, so our purpose it to try and teach them.
+              Our goal is to teach everyone how to do it. The site will provide information about what the parts of the computer does,
+              which products to consider when buying parts, how to assemble it and which OS to pick.</p>
           </section>
 
           <hr />
@@ -70,11 +72,14 @@
             <p>Home page: Our mission</p>
             <p>Sections:</p>
             <ol>
-              <li>About the parts: Will explain in minor detail how each of the parts of a PC work.</li>
-              <li>Comparison of parts currently on the market: Will compare prices and specs. of the parts currently on the market.</li>
-              <li>How to assemble the PC: How to connect the parts together.</li>
-              <li>Choosing an operatins system: Comparison of operating systems and installation instructions.</li>
+              <li>About the parts: Will explain in minor detail how each of the parts of a PC work (~2 page).</li>
+              <li>Comparison of vendors and parts currently on the market (~2 page).</li>
+              <li>How to assemble the PC: How to connect the parts together (~2 page).</li>
+              <li>Choosing an operatins system: Comparison of operating systems and basic installation instructions (~1 page).</li>
             </ol>
+            <p>When we say parts, we mean specifically the internal parts CPU, RAM, GPU, motherboard, cooling, storage,
+              sound card, optical drive, network interface, PSU, and the external parts case, display, keyboard, mouse,
+              headset, speakers and other accessories. We will talk mainly about the internal parts.</p>
           </section>
 
           <hr />
