--- a/Documents/PX_template.html
+++ b/Documents/PX_template.html
@@ -2,7 +2,7 @@
 
 <!-- WARNING: Do not edit after deadline has passed! -->
 
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="project info" />
@@ -33,7 +33,7 @@
             </header>
 
             <figure class="float-right">
-              <img src="../res/img_0.jpg" width="150px" alt="Image placeholder" />
+              <img src="../res/img_0.jpg" width="150" alt="Image placeholder" />
               <figcaption>404 - img not found</figcaption>
             </figure>
 
