--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -72,10 +72,10 @@
             <p>Home page: Our mission</p>
             <p>Sections:</p>
             <ol>
-              <li>About the parts: Will explain in minor detail how each of the parts of a PC work (~2 page).</li>
-              <li>Comparison of vendors and parts currently on the market (~2 page).</li>
-              <li>How to assemble the PC: How to connect the parts together (~2 page).</li>
-              <li>Choosing an operatins system: Comparison of operating systems and basic installation instructions (~1 page).</li>
+              <li>About the parts: Will explain in minor detail how each of the parts of a PC work.</li>
+              <li>Comparison of vendors and parts currently on the market.</li>
+              <li>How to assemble the PC: How to connect the parts together.</li>
+              <li>Choosing an operatins system: Comparison of operating systems and basic installation instructions.</li>
             </ol>
             <p>When we say parts, we mean specifically the internal parts CPU, RAM, GPU, motherboard, cooling, storage,
               sound card, optical drive, network interface, PSU, and the external parts case, display, keyboard, mouse,
