Updated P1 content organization

--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -72,14 +72,34 @@
             <p>Home page: Our mission</p>
             <p>Sections:</p>
             <ol>
-              <li>About the parts: Will explain in minor detail how each of the parts of a PC work.</li>
-              <li>Comparison of vendors and parts currently on the market.</li>
-              <li>How to assemble the PC: How to connect the parts together.</li>
-              <li>Choosing an operatins system: Comparison of operating systems and basic installation instructions.</li>
+              <li>About the parts: Will explain in minor detail how each of the parts of a PC work.
+                <ol>
+                  <li>Motherboard, CPU</li>
+                  <li>RAM, GPU</li>
+                  <li>Storage, network interface, sound card</li>
+                  <li>Cooling, PSU, case</li>
+                  <li>Accessories: Display, keyboard, mouse, headset, speakers, other.</li>
+                </ol>
+              </li>
+              <li>About the part vendors.
+                <ol>
+                  <li>Vendor comparison for each general class of parts</li>
+                </ol>
+              </li>
+              <li>Comparison of operating systems.
+                <ol>
+                  <li>Windows</li>
+                  <li>Linux</li>
+                  <li>Macintosh</li>
+                </ol>
+              </li>
+              <li>Assembling the PC.
+                <ol>
+                  <li>Hardware</li>
+                  <li>Software</li>
+                </ol>
+              </li>
             </ol>
-            <p>When we say parts, we mean specifically the internal parts CPU, RAM, GPU, motherboard, cooling, storage,
-              sound card, optical drive, network interface, PSU, and the external parts case, display, keyboard, mouse,
-              headset, speakers and other accessories. We will talk mainly about the internal parts.</p>
           </section>
 
           <hr />
