--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -72,21 +72,21 @@
             <p>Home page: Our mission</p>
             <p>Sections:</p>
             <ol>
-              <li>About the parts: Will explain in minor detail how each of the parts of a PC work.
+              <li>About the parts
                 <ol>
                   <li>Motherboard, CPU</li>
                   <li>RAM, GPU</li>
                   <li>Storage, network interface, sound card</li>
                   <li>Cooling, PSU, case</li>
-                  <li>Accessories: Display, keyboard, mouse, headset, speakers, other.</li>
+                  <li>Accessories: Display, keyboard, mouse, headset, speakers, other</li>
                 </ol>
               </li>
-              <li>About the part vendors.
+              <li>About the part vendors
                 <ol>
                   <li>Vendor comparison for each general class of parts</li>
                 </ol>
               </li>
-              <li>Comparison of operating systems.
+              <li>Comparison of operating systems
                 <ol>
                   <li>Windows</li>
                   <li>Linux</li>
