--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -69,7 +69,7 @@
             </header>
 
             <p>The site will consist of four sections plus a home page, where each section will consist of minimum one page.</p>
-            <p>Home page: Our mission</p>
+            <p>Home page: Info about site, our mission and basic sitemap</p>
             <p>Sections:</p>
             <ol>
               <li>About the parts
