--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -93,7 +93,7 @@
                   <li>Macintosh</li>
                 </ol>
               </li>
-              <li>Assembling the PC.
+              <li>Assembling the PC
                 <ol>
                   <li>Hardware</li>
                   <li>Software</li>
