--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -86,7 +86,7 @@
                   <li>Vendor comparison for each general class of parts</li>
                 </ol>
               </li>
-              <li>Comparison of operating systems
+              <li>About the operating systems
                 <ol>
                   <li>Windows</li>
                   <li>Linux</li>
