--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -70,7 +70,7 @@
 
             <p>The site will consist of four sections plus a home page, where each section will consist of minimum one page.</p>
             <p>Home page: Info about site, our mission and basic sitemap</p>
-            <p>Sections:</p>
+            <h2>Sections and pages</h2>
             <ol>
               <li>About the parts
                 <ol>
