--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -100,6 +100,12 @@
                 </ol>
               </li>
             </ol>
+
+            <h2>Site sketch</h2>
+            <figure>
+              <img width="400" src="../res/website_sketch.png" alt="Site sketch" />
+              <figcaption>How the website will look like.</figcaption>
+            </figure>
           </section>
 
           <hr />
