Moved files and updated links

--- a/Documents/PX_template.html
+++ b/Documents/PX_template.html
@@ -5,7 +5,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="project info" />
+    <meta name="description" content="Document PX: Abc" />
     <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
     <meta name=viewport content="width=device-width, initial-scale=1" />
     <title>PX Template</title>
@@ -14,7 +14,7 @@
     <!-- Website style -->
     <link rel="stylesheet" type="text/css" href="../style/document.css" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../res/favicon.png" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
   </head>
 
   <body>
@@ -33,7 +33,7 @@
             </header>
 
             <figure class="float-right">
-              <img src="../res/img_0.jpg" width="150" alt="Image placeholder" />
+              <img src="../images/placeholder_150x0.jpg" width="150" alt="Image placeholder" />
               <figcaption>404 - img not found</figcaption>
             </figure>
 
