--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -5,7 +5,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="project info" />
+    <meta name="description" content="Document P1: Project requirements" />
     <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
     <meta name=viewport content="width=device-width, initial-scale=1" />
     <title>P1 Project Requirements</title>
@@ -14,7 +14,7 @@
     <!-- Website style -->
     <link rel="stylesheet" type="text/css" href="../style/document.css" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../res/favicon.png" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
   </head>
 
   <body>
@@ -103,7 +103,7 @@
 
             <h2>Site sketch</h2>
             <figure>
-              <img width="400" src="../res/website_sketch.png" alt="Site sketch" />
+              <img width="400" src="../images/documents/website_sketch.png" alt="Site sketch" />
               <figcaption>How the website will look like.</figcaption>
             </figure>
           </section>
