--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="project home" />
+    <meta name="description" content="Build a PC by Ad Infinitum: Home page" />
     <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
     <meta name=viewport content="width=device-width, initial-scale=1" />
     <title>Ad Infinitum</title>
     <!-- Style normalizer: Normalize.css -->
-    <link rel="stylesheet" type="text/css" href="style/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="./style/normalize.css" />
     <!-- Website style -->
-    <link rel="stylesheet" type="text/css" href="style/site.css" />
+    <link rel="stylesheet" type="text/css" href="./style/site.css" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="res/favicon.png" />
+    <link rel="icon" type="image/png" href="./images/favicon.png" />
   </head>
 
   <body>
