Changed document file structure

--- a/Documents/P1_requirements.html
+++ b/Documents/P1_requirements.html
@@ -6,22 +6,22 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Document P1: Project requirements" />
-    <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
+    <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
     <meta name=viewport content="width=device-width, initial-scale=1" />
     <title>P1 Project Requirements</title>
     <!-- Style normalizer: Normalize.css -->
-    <link rel="stylesheet" type="text/css" href="../style/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="style/normalize.css" />
     <!-- Website style -->
-    <link rel="stylesheet" type="text/css" href="../style/document.css" />
+    <link rel="stylesheet" type="text/css" href="style/document.css" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../images/favicon.png" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
 
   <body>
     <div class="outer-container">
       <div class="banner">
         <p class="banner-title"><a href="#">P1 Project Requirements</a></p>
-        <p class="banner-sub-title">H&aring;vard, Runar, Petter, Thomas</p>
+        <p class="banner-sub-title">H&aring;vard, Petter, Runar, Thomas</p>
         <p class="banner-date">Friday 23.09.2016</p>
       </div>
 
@@ -103,7 +103,7 @@
 
             <h2>Site sketch</h2>
             <figure>
-              <img width="400" src="../images/documents/website_sketch.png" alt="Site sketch" />
+              <img width="400" src="images/website_sketch.png" alt="Site sketch" />
               <figcaption>How the website will look like.</figcaption>
             </figure>
           </section>
