--- a/Documents/P2_design.html
+++ b/Documents/P2_design.html
@@ -5,10 +5,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Document PX: Abc" />
-    <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
+    <meta name="description" content="Document P2: Project design" />
+    <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
     <meta name=viewport content="width=device-width, initial-scale=1" />
-    <title>PX Template</title>
+    <title>P2 Project Design</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
     <!-- Website style -->
@@ -20,9 +20,9 @@
   <body>
     <div class="outer-container">
       <div class="banner">
-        <p class="banner-title"><a href="#">PX Template</a></p>
+        <p class="banner-title"><a href="#">P2 Project Design</a></p>
         <p class="banner-sub-title">H&aring;vard, Petter, Runar, Thomas</p>
-        <p class="banner-date">&lt;weekday&gt; &lt;date&gt;</p>
+        <p class="banner-date">Sunday 09.10.2016</p>
       </div>
 
       <div class="inner-container">
@@ -31,11 +31,6 @@
             <header>
               <h1><a href="#tmp_sect_1">TMP Section 2</a></h1>
             </header>
-
-            <figure class="float-right">
-              <img src="images/placeholder_150x0.jpg" width="150" alt="Image placeholder" />
-              <figcaption>404 - img not found</figcaption>
-            </figure>
 
             <p>TMP section 1.</p>
           </section>
