--- a/Documents/index.html
+++ b/Documents/index.html
@@ -5,10 +5,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Document PX: Abc" />
-    <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
+    <meta name="description" content="Project documents" />
+    <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
     <meta name=viewport content="width=device-width, initial-scale=1" />
-    <title>PX Template</title>
+    <title>Project Documents</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
     <!-- Website style -->
@@ -20,34 +20,20 @@
   <body>
     <div class="outer-container">
       <div class="banner">
-        <p class="banner-title"><a href="#">PX Template</a></p>
+        <p class="banner-title"><a href="#">Project Documents</a></p>
         <p class="banner-sub-title">H&aring;vard, Petter, Runar, Thomas</p>
-        <p class="banner-date">&lt;weekday&gt; &lt;date&gt;</p>
+        <p class="banner-date">Autumn 2016</p>
       </div>
 
       <div class="inner-container">
         <main>
-          <section id="tmp_sect_1">
+         <section id="documents">
             <header>
-              <h1><a href="#tmp_sect_1">TMP Section 2</a></h1>
+              <h1><a href="#documents">Documents</a></h1>
             </header>
 
-            <figure class="float-right">
-              <img src="images/placeholder_150x0.jpg" width="150" alt="Image placeholder" />
-              <figcaption>404 - img not found</figcaption>
-            </figure>
-
-            <p>TMP section 1.</p>
-          </section>
-
-          <hr />
-
-          <section id="tmp_sect_2">
-            <header>
-              <h1><a href="#tmp_sect_2">TMP Section 2</a></h1>
-            </header>
-
-            <p>TMP section 2.</p>
+            <p><a href="P1_requirements.html">P1: Project Requirements</a></p>
+            <p><a href="P2_design.html">P2: Project Design</a></p>
           </section>
         </main>
       </div>
