Changed paths to lower case (try 1)

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name=viewport content="width=device-width, initial-scale=1" />
     <title>Ad Infinitum</title>
     <!-- Style normalizer: Normalize.css -->
-    <link rel="stylesheet" type="text/css" href="./style/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="style/normalize.css" />
     <!-- Website style -->
-    <link rel="stylesheet" type="text/css" href="./style/site.css" />
+    <link rel="stylesheet" type="text/css" href="style/site.css" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./images/favicon.png" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
 
   <body>
@@ -39,7 +39,7 @@
             </header>
 
             <ul>
-              <li><a href="./Documents/P1_requirements.html">P1 Project Requirements</a></li>
+              <li><a href="documents/">Project Documents</a></li>
             </ul>
           </section>
         </main>
