--- a/documents/p2_design.html
+++ b/documents/p2_design.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Document P2: Project design" />
     <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
-    <meta name=viewport content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>P2 Project Design</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
