--- a/documents/px_template.html
+++ b/documents/px_template.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Document PX: Abc" />
     <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
-    <meta name=viewport content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PX Template</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
