--- a/documents/index.html
+++ b/documents/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Project documents" />
     <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
-    <meta name=viewport content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Project Documents</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
