--- a/documents/p1_requirements.html
+++ b/documents/p1_requirements.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Document P1: Project requirements" />
     <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
-    <meta name=viewport content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>P1 Project Requirements</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
