Added link to mockups and images
La til linker til noen av mockupene og bildene

Vet ikke hvordan jeg linker til en hel bildemappe, sånn at alle bildene
visses når jeg linker til mappen....

--- a/images/index.html
+++ b/images/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Project documents" />
     <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Project Documents</title>
+    <title>Images</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
     <!-- Website style -->
@@ -20,7 +20,7 @@
   <body>
     <div class="outer-container">
       <div class="banner">
-        <p class="banner-title"><a href="#">Project Documents</a></p>
+        <p class="banner-title"><a href="#">Images</a></p>
         <p class="banner-sub-title">H&aring;vard, Petter, Runar, Thomas</p>
         <p class="banner-date">Autumn 2016</p>
       </div>
@@ -29,12 +29,20 @@
         <main>
          <section id="documents">
             <header>
-              <h1><a href="#documents">Documents</a></h1>
+              <h1><a href="#documents">Images</a></h1>
             </header>
 
-            <p><a href="p1_requirements.html">P1: Project Requirements</a></p>
-            <p><a href="p2_design.html">P2: Project Design</a></p>
-			<p><a href="../images/index.html">P2 Mockups and images: Images</a></p>
+            <p><a href="logo.gif">P2: logo.gif</a></p>
+            <p><a href="header-background">P2: Header background</a></p>
+			<p><a href="background">P2: Background</a></p>
+			<p><a href="/logo_1024.gif">P2: One of the logo .gifs</a></p>
+			<p><a href="/2.5_vs_3.5_HDD.JPG">P2: One of the part .jpg more will be added</a></p>'
+			<p><a href="../documents/mockups/mockup_of_page.png">P2 Mockup :Mockup of the whole webpage</a></p>
+			<p><a href="../documents/mockups/mockup_of_dropdown">P2 Mockup: Mockup of the dropdown</a></p>
+			<p><a href="../documents/mockups/mockup_of_dropdown1">P2 Mockup: Mockup of the dropdown when it is down</a></p>
+			<p><a href="../documents/mockups/mokcup_of_breadcrumps">P2 Mockup: Mockup of the breadcrumps</a></p>
+			<p><a href="../documents/mockups/logo/logo_1024.gif">P2 Mockup: Mockup of the logo for the webpage</a></p>
+			
           </section>
         </main>
       </div>
