--- a/images/index.html
+++ b/images/index.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Images</title>
     <!-- Style normalizer: Normalize.css -->
-    <link rel="stylesheet" type="text/css" href="style/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../documents/style/normalize.css" />
     <!-- Website style -->
-    <link rel="stylesheet" type="text/css" href="style/document.css" />
+    <link rel="stylesheet" type="text/css" href="../documents/style/document.css" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/png" href="../documents/images/favicon.png" />
   </head>
 
   <body>
