Links to pictures was wrong fixed

--- a/images/index.html
+++ b/images/index.html
@@ -33,15 +33,15 @@
             </header>
 
             <p><a href="logo.gif">P2: logo.gif</a></p>
-            <p><a href="header-background">P2: Header background</a></p>
-			<p><a href="background">P2: Background</a></p>
-			<p><a href="/logo_1024.gif">P2: One of the logo .gifs</a></p>
-			<p><a href="/2.5_vs_3.5_HDD.JPG">P2: One of the part .jpg more will be added</a></p>'
-			<p><a href="../documents/mockups/mockup_of_page.png">P2 Mockup :Mockup of the whole webpage</a></p>
-			<p><a href="../documents/mockups/mockup_of_dropdown">P2 Mockup: Mockup of the dropdown</a></p>
-			<p><a href="../documents/mockups/mockup_of_dropdown1">P2 Mockup: Mockup of the dropdown when it is down</a></p>
-			<p><a href="../documents/mockups/mokcup_of_breadcrumps">P2 Mockup: Mockup of the breadcrumps</a></p>
-			<p><a href="../documents/mockups/logo/logo_1024.gif">P2 Mockup: Mockup of the logo for the webpage</a></p>
+            <p><a href="header-background.gif">P2: Header background</a></p>
+			<p><a href="background.gif">P2: Background</a></p>
+			<p><a href="logo/logo_1024.gif">P2: One of the logo .gifs</a></p>
+			<p><a href="parts/2.5_vs_3.5_HDD.JPG">P2: One of the part .jpg more will be added</a></p>'
+			<p><a href="../documents/images/mockups/mockup_of_page.png">P2 Mockup :Mockup of the whole webpage</a></p>
+			<p><a href="../documents/images/mockups/mockup_of_dropdown.png">P2 Mockup: Mockup of the dropdown</a></p>
+			<p><a href="../documents/images/mockups/mockup_of_dropdown1.png">P2 Mockup: Mockup of the dropdown when it is down</a></p>
+			<p><a href="../documents/images/mockups/mokcup_of_breadcrumps.png">P2 Mockup: Mockup of the breadcrumps</a></p>
+			<p><a href="../documents/images/mockups/logo/logo_1024.gif">P2 Mockup: Mockup of the logo for the webpage</a></p>
 			
           </section>
         </main>
