Moved some files, updated P2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Build-a-PC: Home" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="github.com/build-a-pc" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Build-a-PC</title>
     <!-- Style normalizer: Normalize.css -->
@@ -40,39 +40,35 @@
         <div class="navbar-container">
           <div class="navbar">
             <ul>
-              <div class="navbar-group">
-                <li class="dropdown">
-                  <a href="#" class="dropbutton">Parts</a>
-                  <div class="dropdown-content">
-                    <a href="#">Motherboard and CPU</a>
-                    <a href="#">RAM and GPU</a>
-                    <a href="#">Storage, network card, sound card</a>
-                    <a href="#">Cooling, PSU, case</a>
-                    <a href="#">Accessories</a>
-                  </div>
-                </li>
+              <li class="dropdown">
+                <a href="#" class="dropbutton">Parts</a>
+                <div class="dropdown-content">
+                  <a href="#">Motherboard and CPU</a>
+                  <a href="#">RAM and GPU</a>
+                  <a href="#">Storage, network card, sound card</a>
+                  <a href="#">Cooling, PSU, case</a>
+                  <a href="#">Accessories</a>
+                </div>
+              </li>
 
-                <li><a href="#">Part vendors</a></li>
-              </div>
+              <li><a href="#">Part vendors</a></li>
 
-              <div class="navbar-group">
-                <li class="dropdown">
-                  <a href="#" class="dropbutton">Operating Systems</a>
-                  <div class="dropdown-content">
-                    <a href="#">Windows</a>
-                    <a href="#">Linux</a>
-                    <a href="#">Macintosh</a>
-                  </div>
-                </li>
+              <li class="dropdown">
+                <a href="#" class="dropbutton">Operating Systems</a>
+                <div class="dropdown-content">
+                  <a href="#">Windows</a>
+                  <a href="#">Linux</a>
+                  <a href="#">Macintosh</a>
+                </div>
+              </li>
 
-                <li class="dropdown">
-                  <a href="#" class="dropbutton">Assembling the PC</a>
-                  <div class="dropdown-content">
-                    <a href="#">Hardware</a>
-                    <a href="#">Software</a>
-                  </div>
-                </li>
-              </div>
+              <li class="dropdown">
+                <a href="#" class="dropbutton">Assembling the PC</a>
+                <div class="dropdown-content">
+                  <a href="#">Hardware</a>
+                  <a href="#">Software</a>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
@@ -97,18 +93,10 @@
                 <figcaption>Figure test</figcaption>
               </figure>
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae turpis neque.
-                Curabitur malesuada sollicitudin ligula id cursus. Integer in iaculis ante, vitae porta neque.
-                Integer porttitor nibh non auctor elementum.
-                Sed posuere lectus purus, sit amet interdum sapien ultricies a.
-                Aliquam viverra pharetra tincidunt. Donec nec ante rhoncus, aliquet quam ut, gravida mauris.
-                Praesent eros magna, ullamcorper id maximus varius, venenatis in lorem.
-                Vestibulum tempus blandit nisi, eu bibendum massa ultrices at.
-                In facilisis, tellus eget vestibulum auctor, sem enim mattis justo, eu laoreet elit purus eget velit.
-                Donec sem tortor, sagittis sed dictum convallis, molestie in dui. Nam pretium tempor lobortis.
-                Sed hendrerit nulla quis neque iaculis posuere. Duis eget placerat sem, sit amet cursus mauris.
-                Aliquam tristique, ex nec accumsan ornare, mi nibh condimentum est, a venenatis sapien nisi in tortor.
-                Sed molestie, odio rhoncus scelerisque accumsan, dui dui euismod dolor, at porta eros magna nec erat.</p>
+              <figure class="float-right">
+                <img class="spin" src="/images/loading.png" />
+                <figcaption>Loading</figcaption>
+              </figure>
 
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae turpis neque.
                 Curabitur malesuada sollicitudin ligula id cursus. Integer in iaculis ante, vitae porta neque.
