Svarte på spørsmål fra Håvard om quiz

--- a/documents/p2_design.html
+++ b/documents/p2_design.html
@@ -198,7 +198,8 @@
       <p>Petter need to finish search function by XX.XX</p>
       <p>Runar need to finish Highlightning by XX.XX</p>
       <p>Thomas need to finish dynamic breadcrumps by XX.XX</p>
-      <p>Petter need to finish testformvalidation (=quiz? -Håvard) by XX.XX</p>
+      <p>Petter need to finish testformvalidation (=quiz? -Håvard) (Ja tenke at leseren kan teste seg selv om han fikk med seg hva han akkurat har lest, noe i den dur, tenke på deg førre vi hadde 4 Javascript)
+	  by XX.XX</p>
       <p>Thomas need to finish beginner/expert mode by XX.XX</p>
           </section>
         </main>
