Added script files

--- a/documents/p2_design.html
+++ b/documents/p2_design.html
@@ -100,6 +100,7 @@
                 </ul>
               </li>
               <li>pages/: Contains all pages other than home (which is in index.html). These files will be loaded into index.html and replace home live via AJAX.</li>
+              <li>scripts/: Contains all JavaScript scripts.</li>
               <li>style/: Contains all styles.
                 <ul>
                   <li>normalize.css: CSS normalizer/reset.</li>
